<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/submit_bug_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_a_bug" />

    <EditText
        android:id="@+id/bug_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/bug_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/submit_bug_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

</LinearLayout>